REOPENED 263730
Unreviewed partial revert of 269630@main to address Speedometer regression
https://bugs.webkit.org/show_bug.cgi?id=263730
Summary Unreviewed partial revert of 269630@main to address Speedometer regression
Chris Dumez
Reported 2023-10-26 10:11:04 PDT
Partial revert of 269630@main as a speculative fix for a Speedometer regression in that range.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-10-26 10:11:15 PDT
Chris Dumez
Comment 2 2023-10-26 10:13:23 PDT
EWS
Comment 3 2023-10-26 11:37:00 PDT
Committed 269819@main (9738fda14348): <https://commits.webkit.org/269819@main> Reviewed commits have been landed. Closing PR #19596 and removing active labels.
WebKit Commit Bot
Comment 4 2023-10-27 07:46:00 PDT
Re-opened since this is blocked by bug 263781
Note You need to log in before you can comment on or make changes to this bug.