Unreviewed partial revert of 269630@main to address Speedometer regression https://bugs.webkit.org/show_bug.cgi?id=263730 rdar://117539820

Unreviewed, partial revert of 269630@main to try and address a Speedometer regression in the range
where this landed.

* Source/WTF/wtf/text/StringView.h:
(WTF::StringView::characterAt const):
(WTF::StringView::unsafeCharacterAt const):

Canonical link: https://commits.webkit.org/269819@main